# FullyRag

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml  setup.ps1  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
.variables/demo_articles/: display_texts.ar.json  display_texts.json
backend/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/scripts/: clean_arxiv.py  index-folder-script.py  index-urls-script.py  prompt_generator.py  scrape_arxiv.py  scrape_medrxiv.py
backend/src/: content_classifiers.py  db_manager.py  rag_system.py  security.py
backend/src/agents/: _graph_store.py  agents.py  graphing_agent.py  pg_rag_assistant.py  rag_tool.py  research_assistant.py  tool_graphing_agent.py  tools_pg.py  tools_plotly.py
backend/src/core/: llm.py  settings.py
backend/src/memory/: postgres.py
backend/src/service/: auth_endpoints.py  service.py  utils.py
docker/: Dockerfile.app  Dockerfile.service
docs/: architecture.md  index.md  language.md  migration.md  security.md  session-management.md  troubleshooting.md
frontend/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
frontend/src/: auth_helpers.py  auth_storage.py  display_texts.py  multilanguage_css.py  session_manager.py  streamlit-app.py
frontend/src/client/: client.py
frontend/src/frontend/: chat.py  feedback.py  pdf_viewer_with_annotations.py  user.py
frontend/src/schema/: __init__.py  models.py  schema.py
scripts/: configure_language.ps1  configure_language.sh  index-urls-script.py  prompt_generator.py
src/: auth_helpers.py  db_manager.py  display_texts.py  multilanguage_css.py  streamlit-app.py
src/agents/: pg_rag_assistant.py  rag_tool.py
src/client/: client.py
src/frontend/: chat.py  user.py
tests/: conftest.py
tests/app/: conftest.py  test_streamlit_app.py
tests/client/: conftest.py  test_client.py
tests/core/: test_llm.py  test_settings.py
tests/integration/: test_docker_e2e.py
tests/rag/: test_rag.py  test_retrieve_by_idx.py
tests/service/: conftest.py  test_service.py  test_service_e2e.py  test_service_streaming.py  test_utils.py
